# ai-first-hcp-crm

./: .dockerignore  .gitignore
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_extensions.py  0002_enums.py  0003_users_auth.py  0004_hcps_products.py  0005_ai_runs.py  0006_interactions.py  0007_interaction_products_follow_ups.py  0008_audit_logs.py  0009_indexes.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/auth/: __init__.py  dependencies.py  exceptions.py  principals.py  roles.py  tokens.py
backend/app/core/: __init__.py  config.py  constants.py  database.py  exceptions.py  logging.py  security.py
backend/app/dependencies/: __init__.py  db.py  settings.py
backend/app/domain/: policies.py
backend/app/middleware/: __init__.py  correlation.py  rate_limit.py  security_headers.py  timing.py
backend/app/models/: __init__.py  ai_run.py  audit_log.py  auth_refresh_token.py  base.py  enums.py  follow_up.py  hcp.py  interaction.py  product.py  user.py
backend/app/repositories/: __init__.py  ai_run_repository.py  audit_repository.py  follow_up_repository.py  hcp_repository.py  interaction_repository.py  product_repository.py  refresh_token_repository.py  user_repository.py
backend/app/schemas/: __init__.py  ai.py  auth.py  common.py  dashboard.py  enums.py  hcp.py  interaction.py  product.py  user.py
backend/app/security/: __init__.py  jwt.py  passwords.py  refresh.py  utils.py
backend/app/services/: __init__.py  ai_assist_service.py  audit_service.py  (+8 more)
(+134 files in other folders)
